###### Installing Themes ######
set( theme_files
    classic.desktop
    classic.png
    classic.svgz
    robotkill.desktop
    robotkill.png
    robotkill.svgz
    mountainadventure.desktop
    mountainadventure.png
    mountainadventure.svgz
    default.desktop
    mummy_madness.png
    mummy_madness.svgz
)

install( FILES ${theme_files} DESTINATION ${DATA_INSTALL_DIR}/killbots/themes )